# Rag-App

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: settings.py
src/generation/: __init__.py  qa_pipeline.py
src/ingestion/: embedder.py  loader.py  splitter.py
src/retrieval/: retriever.py  vector_store.py
